Updates before the latest session

--- a/intro/joke.ipynb
+++ b/intro/joke.ipynb
@@ -62,11 +62,27 @@
    "outputs": [],
    "source": [
     "# Load environment variables in a file called .env\n",
+    "# Print the key prefixes to help with any debugging\n",
     "\n",
     "load_dotenv()\n",
-    "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY', 'your-key-if-not-using-env')\n",
-    "os.environ['ANTHROPIC_API_KEY'] = os.getenv('ANTHROPIC_API_KEY', 'your-key-if-not-using-env')\n",
-    "os.environ['GOOGLE_API_KEY'] = os.getenv('GOOGLE_API_KEY', 'your-key-if-not-using-env')"
+    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "anthropic_api_key = os.getenv('ANTHROPIC_API_KEY')\n",
+    "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
+    "\n",
+    "if openai_api_key:\n",
+    "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
+    "else:\n",
+    "    print(\"OpenAI API Key not set\")\n",
+    "    \n",
+    "if anthropic_api_key:\n",
+    "    print(f\"Anthropic API Key exists and begins {anthropic_api_key[:7]}\")\n",
+    "else:\n",
+    "    print(\"Anthropic API Key not set\")\n",
+    "\n",
+    "if google_api_key:\n",
+    "    print(f\"Google API Key exists\")\n",
+    "else:\n",
+    "    print(\"Google API Key not set\")"
    ]
   },
   {
@@ -83,8 +99,7 @@
     "\n",
     "claude = anthropic.Anthropic()\n",
     "\n",
-    "google.generativeai.configure()\n",
-    "gemini = google.generativeai.GenerativeModel('gemini-pro')"
+    "google.generativeai.configure()"
    ]
   },
   {
@@ -140,23 +155,6 @@
    "source": [
     "# GPT-3.5-Turbo\n",
     "\n",
-    "completion = gpt.chat.completions.create(model='gpt-3.5-turbo', messages=prompts)\n",
-    "print(completion.choices[0].message.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f5b71af-f193-4e53-b633-2c546f518dff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prompts = [\n",
-    "    {\"role\": \"system\", \"content\": system_message},\n",
-    "    {\"role\": \"user\", \"content\": user_prompt},\n",
-    "    {\"role\": \"assistant\", \"content\": \"Why did the statistician bring a ladder to the bar?\\n\\nBecause he heard the drinks were on the house!\"},\n",
-    "    {\"role\": \"user\", \"content\": \"Can you explain why that joke is relevant to Data Scientists?\"}\n",
-    "  ]\n",
     "completion = gpt.chat.completions.create(model='gpt-3.5-turbo', messages=prompts)\n",
     "print(completion.choices[0].message.content)"
    ]
@@ -252,10 +250,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gemini\n",
+    "# The API for Gemini has a slightly different structure.\n",
+    "# I've heard that on some PCs, this Gemini code causes the Kernel to crash.\n",
+    "# If that happens to you, please skip this cell and use the next cell instead - an alternative approach.\n",
     "\n",
+    "gemini = google.generativeai.GenerativeModel(\n",
+    "    model_name='gemini-1.5-flash',\n",
+    "    system_instruction=system_message\n",
+    ")\n",
     "response = gemini.generate_content(user_prompt)\n",
     "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d0cf10f-bcd4-4416-ba85-007e2791cceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# As an alternative way to use Gemini that bypasses Google's python API library,\n",
+    "# Google has recently released new endpoints that means you can use Gemini via the client libraries for OpenAI!\n",
+    "\n",
+    "gemini_via_openai_client = OpenAI(\n",
+    "    api_key=google_api_key, \n",
+    "    base_url=\"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
+    ")\n",
+    "\n",
+    "response = gemini_via_openai_client.chat.completions.create(\n",
+    "    model=\"gemini-1.5-flash\",\n",
+    "    messages=prompts\n",
+    ")\n",
+    "print(response.choices[0].message.content)"
    ]
   },
   {
@@ -304,7 +330,7 @@
     "# Did you notice it responded in markdown? We can show that nicely:\n",
     "\n",
     "stream = gpt.chat.completions.create(\n",
-    "    model='gpt-4o',\n",
+    "    model='gpt-4o-mini',\n",
     "    messages=prompts,\n",
     "    temperature=0.7,\n",
     "    stream=True\n",
@@ -382,15 +408,47 @@
    "source": [
     "## Recap: first we tried 6 Frontier LLMs through their chat interfaces\n",
     "## Then in this notebook we called Cloud APIs\n",
-    "## Now try the 3rd way to use LLMs - direct inference of Open Source Models with HuggingFace\n",
+    "## Now try the 3rd way to use LLMs - direct inference of Open Source Models running locally with Ollama\n",
     "\n",
-    "Visit this Google Colab notebook: https://colab.research.google.com/drive/1CRgX6RVqnWZDexXLACbq91pX2I7O7Swu?usp=sharing"
+    "Visit the README for instructions on installing Ollama locally\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d638ef6f-3a72-4520-bb0d-74989f3e837b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ollama pull llama3.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca2408cd-ad21-4d24-826b-7858f3b8e380",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ollama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77086d85-3887-42d3-b109-7ee7395bf314",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = ollama.chat(model=\"llama3.2\", messages=prompts)\n",
+    "reply = response['message']['content']\n",
+    "display(Markdown(reply))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "168cea0b-a83b-45bc-a95e-ee9ccccc16af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -412,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
