--- a/project1 - Airline AI Assistant/assistant.ipynb
+++ b/project1 - Airline AI Assistant/assistant.ipynb
@@ -80,7 +80,7 @@
     "# For our chatbot we will select GPT-4o-mini due to the price efficiency\n",
     "\n",
     "MODEL = \"gpt-4o-mini\"\n",
-    "gpt = OpenAI()"
+    "openai = OpenAI()"
    ]
   },
   {
@@ -131,7 +131,7 @@
     "        done = True\n",
     "    else:\n",
     "        conversation.append({\"role\": \"user\", \"content\": message})\n",
-    "        response = gpt.chat.completions.create(model=MODEL, messages=conversation)\n",
+    "        response = openai.chat.completions.create(model=MODEL, messages=conversation)\n",
     "        reply = response.choices[0].message.content\n",
     "        conversation.append({\"role\": \"assistant\", \"content\": reply})\n",
     "        print(BLUE + reply + RESET)"
@@ -160,16 +160,11 @@
     "import gradio as gr\n",
     "\n",
     "def chat(message, history):\n",
-    "    conversation = [{\"role\": \"system\", \"content\": system_message}]\n",
-    "    for human, assistant in history:\n",
-    "        conversation.append({\"role\": \"user\", \"content\": human})\n",
-    "        conversation.append({\"role\": \"assistant\", \"content\": assistant})\n",
-    "    conversation.append({\"role\": \"user\", \"content\": message})\n",
-    "    response = gpt.chat.completions.create(model=MODEL,messages=conversation)\n",
+    "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
+    "    response = openai.chat.completions.create(model=MODEL, messages=messages)\n",
     "    return response.choices[0].message.content\n",
     "\n",
-    "view = gr.ChatInterface(fn=chat)\n",
-    "view.launch()"
+    "gr.ChatInterface(fn=chat, type=\"messages\").launch(inbrowser=True)"
    ]
   },
   {
@@ -245,38 +240,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47912351-c5ea-46ba-a37a-217e8b97b87a",
+   "id": "3e017bd3-6fee-42d3-aeea-e007bcaeed53",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def chat(message, history):\n",
+    "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
+    "    response = openai.chat.completions.create(model=MODEL, messages=messages, tools=tools)\n",
+    "\n",
+    "    if response.choices[0].finish_reason==\"tool_calls\":\n",
+    "        message = response.choices[0].message\n",
+    "        response, city = handle_tool_call(message)\n",
+    "        messages.append(message)\n",
+    "        messages.append(response)\n",
+    "        response = openai.chat.completions.create(model=MODEL, messages=messages)\n",
+    "    \n",
+    "    return response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78894d94-4be0-4bdf-8763-16e5fafadd15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We have to write that function handle_tool_call:\n",
+    "\n",
     "def handle_tool_call(message):\n",
     "    tool_call = message.tool_calls[0]\n",
     "    arguments = json.loads(tool_call.function.arguments)\n",
     "    city = arguments.get('destination_city')\n",
     "    price = get_ticket_price(city)\n",
-    "    return {\"role\": \"tool\",\n",
-    "            \"content\": json.dumps({\"destination_city\": city,\"price\": price}),\n",
-    "            \"tool_call_id\": message.tool_calls[0].id}, city\n",
-    "    \n",
-    "def chat(message, history):\n",
-    "    conversation = [{\"role\": \"system\", \"content\": system_message}]\n",
-    "    for human, assistant in history:\n",
-    "        conversation.append({\"role\": \"user\", \"content\": human})\n",
-    "        conversation.append({\"role\": \"assistant\", \"content\": assistant})\n",
-    "    conversation.append({\"role\": \"user\", \"content\": message})\n",
-    "    response = gpt.chat.completions.create(model=MODEL, messages=conversation, tools=tools)\n",
-    "\n",
-    "    if response.choices[0].finish_reason==\"tool_calls\":\n",
-    "        message = tool_call = response.choices[0].message\n",
-    "        response, city = handle_tool_call(message)\n",
-    "        conversation.append(message)\n",
-    "        conversation.append(response)\n",
-    "        response = gpt.chat.completions.create(model=MODEL, messages=conversation)\n",
-    "    \n",
-    "    return response.choices[0].message.content\n",
-    "\n",
-    "view = gr.ChatInterface(fn=chat)\n",
-    "view.launch()"
+    "    response = {\n",
+    "        \"role\": \"tool\",\n",
+    "        \"content\": json.dumps({\"destination_city\": city,\"price\": price}),\n",
+    "        \"tool_call_id\": message.tool_calls[0].id\n",
+    "    }\n",
+    "    return response, city"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e862272-cc53-48bd-aad7-fb4a982afc1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gr.ChatInterface(fn=chat, type=\"messages\").launch(inbrowser=True)"
    ]
   },
   {
@@ -284,11 +295,11 @@
    "id": "7174aff0-b2d1-41cb-a93f-c371c8bbad76",
    "metadata": {},
    "source": [
-    "## Agentization\n",
+    "## Agentization (in a simple way)\n",
     "\n",
-    "Giving our Assistant the ability to interact with a Tool is an example of Agentization.\n",
+    "Giving our Assistant the ability to interact with a Tool could be considered adding an Agentic design pattern to our solution. LLMs being able to use tools is one of the Hallmarks of Agentic AI.\n",
     "\n",
-    "Another example is having a different AI work on a complementary specialist Task.\n",
+    "Another example is having multiple AIs collaborate to solve the problem. Let's add another AI to the mix!\n",
     "\n",
     "Let's pick a fun one: adding multi-modality.."
    ]
@@ -305,7 +316,7 @@
     "from PIL import Image\n",
     "\n",
     "def artist_agent(city):\n",
-    "    image_response = gpt.images.generate(\n",
+    "    image_response = openai.images.generate(\n",
     "            model=\"dall-e-3\",\n",
     "            prompt=f\"An image representing a vacation in {city}, showing tourist spots and everything unique about {city}, in a vibrant pop-art style\",\n",
     "            size=\"1024x1024\",\n",
@@ -333,11 +344,9 @@
    "id": "6d76e9be-70e5-47d7-bdc8-a484630c19a0",
    "metadata": {},
    "source": [
-    "## Bringing it all together in an Agent Framework\n",
+    "## Bringing it all together in a mini Agent Framework\n",
     "\n",
-    "Finally we bring together our Assistant, Tool and Agent\n",
-    "\n",
-    "The code that brings this together and handles the memory and orchestration is sometimes called the 'Agent Framework'"
+    "Finally we bring together our Assistant, Tool and Agent\n"
    ]
   },
   {
@@ -347,24 +356,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def chat(message, history):\n",
+    "def chat(history):\n",
+    "    messages = [{\"role\": \"system\", \"content\": system_message}] + history\n",
+    "    response = openai.chat.completions.create(model=MODEL, messages=messages, tools=tools)\n",
     "    image = None\n",
-    "    conversation = [{\"role\": \"system\", \"content\": system_message}]\n",
-    "    for human, assistant in history:\n",
-    "        conversation.append({\"role\": \"user\", \"content\": human})\n",
-    "        conversation.append({\"role\": \"assistant\", \"content\": assistant})\n",
-    "    conversation.append({\"role\": \"user\", \"content\": message})\n",
-    "    response = gpt.chat.completions.create(model=MODEL, messages=conversation, tools=tools)\n",
-    "\n",
-    "    if response.choices[0].finish_reason==\"tool_calls\":\n",
-    "        message = tool_call = response.choices[0].message\n",
-    "        response, city = handle_tool_call(message)\n",
-    "        conversation.append(message)\n",
-    "        conversation.append(response)\n",
-    "        image = artist_agent(city)\n",
-    "        response = gpt.chat.completions.create(model=MODEL, messages=conversation)\n",
     "    \n",
-    "    return response.choices[0].message.content, image"
+    "    if response.choices[0].finish_reason==\"tool_calls\":\n",
+    "        message = response.choices[0].message\n",
+    "        response, city = handle_tool_call(message)\n",
+    "        messages.append(message)\n",
+    "        messages.append(response)\n",
+    "        image = artist_agent(city)\n",
+    "        response = openai.chat.completions.create(model=MODEL, messages=messages)\n",
+    "        \n",
+    "    reply = response.choices[0].message.content\n",
+    "    history += [{\"role\":\"assistant\", \"content\":reply}]\n",
+    "    return history, image"
    ]
   },
   {
@@ -374,32 +381,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# More involved Gradio code as we're not using the preset Chat interface\n",
+    "# More involved Gradio code as we're not using the preset Chat interface!\n",
     "\n",
     "with gr.Blocks() as ui:\n",
     "    with gr.Row():\n",
-    "        chatbot = gr.Chatbot(height=500)\n",
+    "        chatbot = gr.Chatbot(height=500, type=\"messages\")\n",
     "        image_output = gr.Image(height=500)\n",
     "    with gr.Row():\n",
-    "        msg = gr.Textbox(label=\"Chat with our AI Assistant:\")\n",
+    "        entry = gr.Textbox(label=\"Chat with our AI Assistant:\")\n",
     "    with gr.Row():\n",
     "        clear = gr.Button(\"Clear\")\n",
     "\n",
-    "    def user(user_message, history):\n",
-    "        return \"\", history + [[user_message, None]]\n",
+    "    def do_entry(message, history):\n",
+    "        history += [{\"role\":\"user\", \"content\":message}]\n",
+    "        return \"\", history\n",
     "\n",
-    "    def bot(history):\n",
-    "        user_message = history[-1][0]\n",
-    "        bot_message, image = chat(user_message, history[:-1])\n",
-    "        history[-1][1] = bot_message\n",
-    "        return history, image\n",
-    "\n",
-    "    msg.submit(user, [msg, chatbot], [msg, chatbot], queue=False).then(\n",
-    "        bot, chatbot, [chatbot, image_output]\n",
+    "    entry.submit(do_entry, inputs=[entry, chatbot], outputs=[entry, chatbot]).then(\n",
+    "        chat, inputs=chatbot, outputs=[chatbot, image_output]\n",
     "    )\n",
-    "    clear.click(lambda: None, None, chatbot, queue=False)\n",
+    "    clear.click(lambda: None, inputs=None, outputs=chatbot, queue=False)\n",
     "\n",
-    "ui.launch()"
+    "ui.launch(inbrowser=True)"
    ]
   },
   {
@@ -442,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
