--- a/project2 - Expert knowledge worker/expert.ipynb
+++ b/project2 - Expert knowledge worker/expert.ipynb
@@ -333,13 +333,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4350b660-88ae-4765-8203-16b02f1bb584",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start the conversation again\n",
+    "\n",
+    "memory = ConversationBufferMemory(memory_key='chat_history', return_messages=True)\n",
+    "conversation_chain = ConversationalRetrievalChain.from_llm(llm=llm, retriever=retriever, memory=memory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b252d8c1-61a8-406d-b57a-8f708a62b014",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# And in Gradio:\n",
+    "# And launch Gradio\n",
     "\n",
-    "view = gr.ChatInterface(expert).launch()"
+    "view = gr.ChatInterface(expert).launch(inbrowser=True)"
    ]
   },
   {
@@ -403,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
