Refinements before the class

--- a/intro/joke.ipynb
+++ b/intro/joke.ipynb
@@ -95,7 +95,7 @@
     "# Connect to OpenAI, Anthropic and Google\n",
     "# All 3 APIs are similar\n",
     "\n",
-    "gpt = OpenAI()\n",
+    "openai = OpenAI()\n",
     "\n",
     "claude = anthropic.Anthropic()\n",
     "\n",
@@ -134,16 +134,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac844baa-1799-4e3d-8135-66494151787a",
+   "metadata": {},
+   "source": [
+    "# How to call the OpenAI API\n",
+    "\n",
+    "The OpenAI API expects messages to be passed in using a particular format.  \n",
+    "This format has been widely adopted by other Cloud AI providers.\n",
+    "\n",
+    "```\n",
+    "    [\n",
+    "        {\"role\": \"system\", \"content\": \"system message goes here\"},\n",
+    "        {\"role\": \"user\", \"content\": \"user message goes here\"}\n",
+    "    ]\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7e10bd8f-98c0-4379-b69b-f1607ef257d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompts = [\n",
+    "# And so, copying this approach:\n",
+    "\n",
+    "tell_a_joke = [\n",
     "    {\"role\": \"system\", \"content\": system_message},\n",
     "    {\"role\": \"user\", \"content\": user_prompt}\n",
     "  ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b7065e6-6a54-4905-a0f4-de8b6ce99302",
+   "metadata": {},
+   "source": [
+    "# Structure of an API call\n",
+    "\n",
+    "## Calling OpenAI:\n",
+    "\n",
+    "`response = openai.chat.completions.create()`\n",
+    "\n",
+    "## Retrieving the reply\n",
+    "\n",
+    "`response.choices[0].message.content`"
    ]
   },
   {
@@ -155,8 +191,8 @@
    "source": [
     "# GPT-3.5-Turbo\n",
     "\n",
-    "completion = gpt.chat.completions.create(model='gpt-3.5-turbo', messages=prompts)\n",
-    "print(completion.choices[0].message.content)"
+    "response = openai.chat.completions.create(model='gpt-3.5-turbo', messages=tell_a_joke)\n",
+    "print(response.choices[0].message.content)"
    ]
   },
   {
@@ -169,12 +205,12 @@
     "# GPT-4o-mini\n",
     "# Temperature setting controls creativity\n",
     "\n",
-    "completion = gpt.chat.completions.create(\n",
+    "response = openai.chat.completions.create(\n",
     "    model='gpt-4o-mini',\n",
-    "    messages=prompts,\n",
+    "    messages=tell_a_joke,\n",
     "    temperature=0.7\n",
     ")\n",
-    "print(completion.choices[0].message.content)"
+    "print(response.choices[0].message.content)"
    ]
   },
   {
@@ -186,12 +222,12 @@
    "source": [
     "# GPT-4o\n",
     "\n",
-    "completion = gpt.chat.completions.create(\n",
+    "response = openai.chat.completions.create(\n",
     "    model='gpt-4o',\n",
-    "    messages=prompts,\n",
+    "    messages=tell_a_joke,\n",
     "    temperature=0.7\n",
     ")\n",
-    "print(completion.choices[0].message.content)"
+    "print(response.choices[0].message.content)"
    ]
   },
   {
@@ -229,7 +265,7 @@
     "# Now let's add in streaming back results\n",
     "\n",
     "result = claude.messages.stream(\n",
-    "    model=\"claude-3-5-sonnet-20240620\",\n",
+    "    model=\"claude-3-5-sonnet-latest\",\n",
     "    max_tokens=200,\n",
     "    temperature=0.7,\n",
     "    system=system_message,\n",
@@ -279,7 +315,7 @@
     "\n",
     "response = gemini_via_openai_client.chat.completions.create(\n",
     "    model=\"gemini-1.5-flash\",\n",
-    "    messages=prompts\n",
+    "    messages=tell_a_joke\n",
     ")\n",
     "print(response.choices[0].message.content)"
    ]
@@ -308,7 +344,7 @@
    "source": [
     "# Let's have it stream back results\n",
     "\n",
-    "stream = gpt.chat.completions.create(\n",
+    "stream = openai.chat.completions.create(\n",
     "    model='gpt-4o-mini',\n",
     "    messages=prompts,\n",
     "    temperature=0.7,\n",
@@ -329,7 +365,7 @@
    "source": [
     "# Did you notice it responded in markdown? We can show that nicely:\n",
     "\n",
-    "stream = gpt.chat.completions.create(\n",
+    "stream = openai.chat.completions.create(\n",
     "    model='gpt-4o-mini',\n",
     "    messages=prompts,\n",
     "    temperature=0.7,\n",
@@ -356,7 +392,7 @@
     "from IPython.display import Image, display\n",
     "import base64\n",
     "\n",
-    "response = gpt.images.generate(\n",
+    "response = openai.images.generate(\n",
     "  model=\"dall-e-3\",\n",
     "  prompt=f\"A photorealistic 3d image that represents the power of a Frontier LLM in solving real business use cases\",\n",
     "  size=\"1024x1024\",\n",
@@ -382,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = gpt.images.generate(\n",
+    "response = openai.images.generate(\n",
     "  model=\"dall-e-3\",\n",
     "  prompt=f\"A vibrant, pop-art style image that represents the power of a Frontier LLM in solving real business use cases\",\n",
     "  size=\"1024x1024\",\n",
@@ -420,7 +456,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ollama pull llama3.2"
+    "!ollama pull llama3.2\n",
+    "!ollama pull gemma2:2b\n",
+    "!ollama pull qwen2.5:3b\n",
+    "!ollama pull phi3:3.8b"
    ]
   },
   {
@@ -434,21 +473,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49200ed8-34bf-4327-89a9-333c315dae88",
+   "metadata": {},
+   "source": [
+    "# Let's ask these 4 open-source models to tell a joke\n",
+    "\n",
+    "## These are examples of \"SMLs\", or Small Language Models, but they pack a punch.."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "77086d85-3887-42d3-b109-7ee7395bf314",
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = ollama.chat(model=\"llama3.2\", messages=prompts)\n",
-    "reply = response['message']['content']\n",
-    "display(Markdown(reply))"
+    "response = ollama.chat(model=\"llama3.2\", messages=tell_a_joke)\n",
+    "print(response['message']['content'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "243c9a6c-aef4-496f-a54a-f15bec457d05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = ollama.chat(model=\"gemma2:2b\", messages=tell_a_joke)\n",
+    "print(response['message']['content'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "642359c2-d62c-42f9-9f15-c3c0b17f8dc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = ollama.chat(model=\"qwen2.5:3b\", messages=tell_a_joke)\n",
+    "print(response['message']['content'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db3bb470-b6e1-4bb2-82ff-69a219ca9bb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = ollama.chat(model=\"phi3:3.8b\", messages=tell_a_joke)\n",
+    "print(response['message']['content'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71d548c4-4607-4af1-befb-bd201c03f2a4",
+   "metadata": {},
+   "source": [
+    "# You can also use the OpenAI Client Libraries to connect with Ollama locally\n",
+    "\n",
+    "Then let's ask the serious business question from before, and stream back results in Markdown."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "168cea0b-a83b-45bc-a95e-ee9ccccc16af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ollama_via_openai = OpenAI(base_url='http://localhost:11434/v1', api_key='ollama')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e99a19df-5afa-46f3-a534-e7722e2ba3fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stream = ollama_via_openai.chat.completions.create(\n",
+    "    model=\"llama3.2\",\n",
+    "    messages=prompts,\n",
+    "    stream=True\n",
+    ")\n",
+    "\n",
+    "reply = \"\"\n",
+    "display_handle = display(Markdown(\"\"), display_id=True)\n",
+    "for chunk in stream:\n",
+    "    reply += chunk.choices[0].delta.content or ''\n",
+    "    reply = reply.replace(\"```\",\"\").replace(\"markdown\",\"\")\n",
+    "    update_display(Markdown(reply), display_id=display_handle.display_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a49e5f0-cbad-4930-b23c-8e17bd540d79",
    "metadata": {},
    "outputs": [],
    "source": []
