--- a/project1 - Airline AI Assistant/assistant.ipynb
+++ b/project1 - Airline AI Assistant/assistant.ipynb
@@ -17,19 +17,15 @@
    "source": [
     "## Setting up your keys\n",
     "\n",
-    "If you haven't done so already, you'll need to create API keys from OpenAI, Anthropic and Google.\n",
+    "If you haven't done so already, you'll need to create API keys from OpenAI.\n",
     "\n",
     "For OpenAI, visit https://openai.com/api/  \n",
-    "For Anthropic, visit https://console.anthropic.com/  \n",
-    "For Google, visit https://ai.google.dev/gemini-api  \n",
     "\n",
     "When you get your API keys, you need to set them as environment variables.\n",
     "\n",
     "EITHER (recommended) create a file called .env in this project root directory, and set your keys there:\n",
     "```\n",
     "OPENAI_API_KEY=xxxx\n",
-    "ANTHROPIC_API_KEY=xxxx\n",
-    "GOOGLE_API_KEY=xxxx\n",
     "````\n",
     "\n",
     "OR enter the keys directly in the cells below."
@@ -49,7 +45,8 @@
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
     "import anthropic\n",
-    "from IPython.display import Markdown, display"
+    "from IPython.display import Markdown, display\n",
+    "import gradio as gr"
    ]
   },
   {
@@ -62,8 +59,13 @@
     "# Load environment variables in a file called .env\n",
     "\n",
     "load_dotenv()\n",
-    "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY', 'your-key-if-not-using-env')\n",
+    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
     "\n",
+    "if openai_api_key:\n",
+    "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
+    "else:\n",
+    "    print(\"OpenAI API Key not set\")\n",
+    "    \n",
     "# Used for printing in color\n",
     "\n",
     "BLUE = \"\\033[34m\"\n",
@@ -144,10 +146,16 @@
    "source": [
     "## Amazing! As simple as that.\n",
     "\n",
+    "### Isn't it great to see the way the LLM keeps the context of the conversation?\n",
+    "\n",
+    "### It's important to realize that this is an illusion - we pass in the entire conversation with every call.\n",
+    "\n",
     "Try playing with the System Prompt to vary the tone.  \n",
     "\n",
     "And now we wrap this in a simple chat() function,  \n",
-    "and then we use the shockingly simple Gradio platform to bring up a Chatbot UI."
+    "and then we use the shockingly simple Gradio platform to bring up a Chatbot UI.\n",
+    "\n",
+    "First, the chat function, which takes the current message and the history of prior messages:"
    ]
   },
   {
@@ -157,12 +165,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gradio as gr\n",
-    "\n",
     "def chat(message, history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
     "    response = openai.chat.completions.create(model=MODEL, messages=messages)\n",
-    "    return response.choices[0].message.content\n",
+    "    return response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd056244-2326-4828-93d1-4af979715017",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# And look how complicated it is to launch a User Interface, with the fabulous gradio platform\n",
     "\n",
     "gr.ChatInterface(fn=chat, type=\"messages\").launch(inbrowser=True)"
    ]
