--- a/project2 - Expert knowledge worker/expert.ipynb
+++ b/project2 - Expert knowledge worker/expert.ipynb
@@ -13,7 +13,9 @@
     "\n",
     "This project will use RAG (Retrieval Augmented Generation) to ensure our question/answering assistant has high accuracy.\n",
     "\n",
-    "We will be using the LangChain framework which does most of the heavy lifting for us! We'll also be using Gradio's chat interface, and Plotly for charts. We'll also be using the popular open source Vector Database Chroma."
+    "We will be using the LangChain framework which does most of the heavy lifting for us! We'll also be using Gradio's chat interface, and Plotly for charts. We'll also be using the popular open source Vector Database Chroma.\n",
+    "\n",
+    "## BEFORE WE START: take a look in the knowledge-base folder"
    ]
   },
   {
@@ -76,7 +78,12 @@
     "# Load environment variables in a file called .env\n",
     "\n",
     "load_dotenv()\n",
-    "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY', 'your-key-if-not-using-env')"
+    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "\n",
+    "if openai_api_key:\n",
+    "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
+    "else:\n",
+    "    print(\"OpenAI API Key not set\")"
    ]
   },
   {
@@ -91,22 +98,25 @@
     "\n",
     "folders = glob.glob(\"knowledge-base/*\")\n",
     "\n",
-    "def add_metadata(doc, doc_type):\n",
-    "    doc.metadata[\"doc_type\"] = doc_type\n",
-    "    return doc\n",
-    "\n",
     "documents = []\n",
     "for folder in folders:\n",
     "    doc_type = os.path.basename(folder)\n",
-    "    loader = DirectoryLoader(folder, glob=\"**/*.md\", loader_cls=TextLoader)\n",
+    "    loader = DirectoryLoader(folder, glob=\"**/*.md\", loader_cls=TextLoader, loader_kwargs={'encoding': 'utf-8'})\n",
     "    folder_docs = loader.load()\n",
-    "    documents.extend([add_metadata(doc, doc_type) for doc in folder_docs])\n",
-    "\n",
+    "    for doc in folder_docs:\n",
+    "        doc.metadata[\"doc_type\"] = doc_type\n",
+    "        documents.append(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f4ed3ec-b1f6-47ca-94ba-686faa9666df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "text_splitter = CharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
-    "chunks = text_splitter.split_documents(documents)\n",
-    "\n",
-    "print(f\"Total number of chunks: {len(chunks)}\")\n",
-    "print(f\"Document types found: {set(doc.metadata['doc_type'] for doc in documents)}\")"
+    "chunks = text_splitter.split_documents(documents)"
    ]
   },
   {
@@ -352,7 +362,7 @@
    "source": [
     "# And launch Gradio\n",
     "\n",
-    "view = gr.ChatInterface(expert).launch(inbrowser=True)"
+    "view = gr.ChatInterface(expert, type=\"messages\").launch(inbrowser=True)"
    ]
   },
   {
