Multiple updates prior to the live event, including Connect Four project

--- a/project1 - Airline AI Assistant/assistant.ipynb
+++ b/project1 - Airline AI Assistant/assistant.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "# Load environment variables in a file called .env\n",
     "\n",
-    "load_dotenv()\n",
+    "load_dotenv(override=True)\n",
     "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
     "\n",
     "if openai_api_key:\n",
@@ -432,7 +432,8 @@
     "Further exercises:\n",
     "\n",
     "1. Swap OpenAI for Claude to experience the changes in style\n",
-    "2. Add another agent to the mix: have the chat respond in audio as well as text"
+    "2. Add another agent to the mix: have the chat respond in audio as well as text\n",
+    "3. Add another tool to simulate booking the flight"
    ]
   },
   {
